# pyminiscraper

./: README.md  bootstrap.sh  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
.github/workflows/: python-publish.yml
pyminiscraper/: atom.py  config.py  context.py  deque.py  domain_filter.py  domain_metadata.py  extract.py  feed.py  filter.py  html.py  main.py  main_rss.py  main_scheduling.py  main_sitemap.py  main_web.py  metadata.py  model.py  mypy.ini  ratelimiter.py  robots.py  rss.py  scrape_html_browser.py  scrape_html_http.py  scraper.py  sitemap.py  stats.py  store_file.py  store_memory.py  url.py
tests/: test_robots.py  test_scraper.py  test_sitemap.py  test_url.py
